syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

package users;

option go_package = "github.com/DKhorkov/hmtm-sso/protobuf/sso;sso";


service UsersService {
  rpc GetUser(GetUserRequest) returns (GetUserResponse) {}
  rpc GetUsers(google.protobuf.Empty) returns (GetUsersResponse) {}
}

message GetUserRequest {
  int64 userID = 1;
}

message GetUserResponse {
  int64 userID = 1;
  string email = 2;
  google.protobuf.Timestamp createdAt = 3;
  google.protobuf.Timestamp updatedAt = 4;
}

message GetUsersResponse {
  repeated GetUserResponse users = 1;
}

